bugfix:fix font size of card inputs

--- a/src/home.html
+++ b/src/home.html
@@ -73,17 +73,21 @@
       <div class="modal-card__body">
         <div class="modal-card__inputs">
           <label for="language" class="text text--md">Select language*</label>
-          <select name="language" id="language" class="text text--capitalize modal-card__select">
+          <select
+            name="language"
+            id="language"
+            class="text text--input text--capitalize modal-card__select"
+          >
             <!-- render selection-->
           </select>
         </div>
         <div class="modal-card__inputs">
           <label for="type" class="text text--md">Type*</label>
-          <select name="type" id="type" class="text modal-card__select">
-            <option value="noun" selected class="text text--capitalize">Noun</option>
-            <option value="verb" selected class="text text--capitalize">Verb</option>
-            <option value="adjective" selected class="text text--capitalize">Adjective</option>
-            <option value="adverb" selected class="text text--capitalize">Adverb</option>
+          <select name="type" id="type" class="text text--input modal-card__select">
+            <option value="noun" selected class="text text--input text--capitalize">Noun</option>
+            <option value="verb" class="text text--input text--capitalize">Verb</option>
+            <option value="adjective" class="text text--input text--capitalize">Adjective</option>
+            <option value="adverb" class="text text--input text--capitalize">Adverb</option>
           </select>
         </div>
         <div class="modal-card__inputs">
