feat:refactor code

--- a/language-management/src/index.html
+++ b/language-management/src/index.html
@@ -51,6 +51,12 @@
       </form>
     </main>
 
+    <!-- Start toast -->
+    <div class="toast">
+      <div class="toast__icon"></div>
+      <p class="text text--md text--light toast__message">Add card successfully</p>
+    </div>
+
     <script type="module" src="./javascripts/main.js"></script>
   </body>
 </html>
